deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-leo
  labels:
    app.kubernetes.io/name: test-leo
    platform.managed-by: argocd
